<resources>
    <string name="app_name">RecipeBook</string>
    <string name="no_recipe_text">Looks like you don\'t have any recipes, you should add some!</string>
    <string name="recipe_edit_button">Edit</string>
    <string name="top_app_directory">RecipeBook</string>
    <string name="search_btn_title">Search Button</string>

    <string name="edit_recipe_title">Recipe Title</string>
    <string name="edit_recipe_tag">Tags</string>
    <string name="edit_recipe_tag_hint">Vegan, Low Calorie, &#8230;</string>
    <string name="edit_recipe_ingredient_hint">1 cup Flour\n1 tsp Baking Soda\n&#8230;</string>
    <string name="edit_recipe_directions_hint">Sift flour and baking soda together&#8230;</string>
    <string name="button_save">Save Recipe</string>

    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>

    <string name="file_separator">#/\**/\#</string>
    <string name="tag_file_name">tags.txt</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
</resources>
